(lang dune 2.9)
(name latool)
(source (github smimram/latool))
(license  GPL-3.0-or-later)
(authors "Samuel Mimram <smimram@gmail.com>")
(maintainers "Samuel Mimram <smimram@gmail.com>")
(generate_opam_files true)

(package
 (name latool)
 (description "Preprocess LaTeX files.")
 (synopsis "Tool to perform various preprocessing on LaTeX files (removing comments, expanding input files, etc.)")
)
